Fix dark mode button spacing

--- a/src/components/header/layered-nav.scss
+++ b/src/components/header/layered-nav.scss
@@ -76,7 +76,7 @@
     color: darken($site-color-dark, 10%);
 
     &:before {
-      content: '☾ DARK';
+      content: "☾ DARK ";
     }
   }
 }
